--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 UNSPLASH_ACCESS_KEY="zX8xWqIRFhRWHgvlg9ZRwSZWB31vr0LYA0Z_VGbg17k"
+OPENAI_API_KEY="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"
